--- a/l200207/frontend/package.json
+++ b/l200207/frontend/package.json
@@ -27,7 +27,9 @@
     "fullcalendar": "^3.10.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "jquery.cookie": "^1.4.1",
     "moment": "^2.24.0",
+    "ngx-cookie-service": "^2.3.0",
     "pm2": "^4.2.3",
     "rxjs": "~6.4.0",
     "socket.io": "^2.3.0",
