--- a/l200207/frontend/package.json
+++ b/l200207/frontend/package.json
@@ -26,12 +26,14 @@
     "chart.js": "^2.5.0",
     "fullcalendar": "^3.10.1",
     "hammerjs": "^2.0.8",
+    "http-headers": "^3.0.2",
+    "http-server": "^0.12.1",
     "jquery": "^3.4.1",
     "jquery.cookie": "^1.4.1",
     "moment": "^2.24.0",
     "ngx-cookie-service": "^2.3.0",
     "pm2": "^4.2.3",
-    "rxjs": "~6.4.0",
+    "set-cookie-parser": "^2.4.3",
     "socket.io": "^2.3.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
@@ -41,6 +43,7 @@
     "@angular/cli": "~8.3.22",
     "@angular/compiler-cli": "~8.2.4",
     "@angular/language-service": "~8.2.4",
+    "@types/http-server": "^0.10.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
