localcommit for girtignore

--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,40 @@ l200207/backend/.vs/ProjectSettings.json
 l200207/backend/.vs/slnx.sqlite
 l200207/backend/.vs/VSWorkspaceState.json
 l200207/backend/.vs/backend/v16/.suo
+l200207/frontEndCleanShrad/.editorconfig
+l200207/frontEndCleanShrad/.gitignore
+l200207/frontEndCleanShrad/angular.json
+l200207/frontEndCleanShrad/browserslist
+l200207/frontEndCleanShrad/karma.conf.js
+l200207/frontEndCleanShrad/package.json
+l200207/frontEndCleanShrad/README.md
+l200207/frontEndCleanShrad/tsconfig.app.json
+l200207/frontEndCleanShrad/tsconfig.json
+l200207/frontEndCleanShrad/tsconfig.spec.json
+l200207/frontEndCleanShrad/tslint.json
+l200207/frontEndCleanShrad/e2e/protractor.conf.js
+l200207/frontEndCleanShrad/e2e/tsconfig.json
+l200207/frontEndCleanShrad/e2e/src/app.e2e-spec.ts
+l200207/frontEndCleanShrad/e2e/src/app.po.ts
+l200207/frontEndCleanShrad/src/favicon.ico
+l200207/frontEndCleanShrad/src/index.html
+l200207/frontEndCleanShrad/src/main.ts
+l200207/frontEndCleanShrad/src/polyfills.ts
+l200207/frontEndCleanShrad/src/styles.scss
+l200207/frontEndCleanShrad/src/test.ts
+l200207/frontEndCleanShrad/src/app/app-routing.module.ts
+l200207/frontEndCleanShrad/src/app/app.component.html
+l200207/frontEndCleanShrad/src/app/app.component.scss
+l200207/frontEndCleanShrad/src/app/app.component.spec.ts
+l200207/frontEndCleanShrad/src/app/app.component.ts
+l200207/frontEndCleanShrad/src/app/app.module.ts
+l200207/frontEndCleanShrad/src/assets/.gitkeep
+l200207/frontEndCleanShrad/src/environments/environment.prod.ts
+l200207/frontEndCleanShrad/src/environments/environment.ts
+.vscode/settings.json
+l200207/frontEndCleanShrad/package-lock.json
+l200207/frontEndCleanShrad/src/app/ajaxes.ts
+l200207/frontEndCleanShrad/src/app/home/home.component.html
+l200207/frontEndCleanShrad/src/app/home/home.component.scss
+l200207/frontEndCleanShrad/src/app/home/home.component.spec.ts
+l200207/frontEndCleanShrad/src/app/home/home.component.ts
