--- a/l200207/frontEndCleanShrad/angular.json
+++ b/l200207/frontEndCleanShrad/angular.json
@@ -25,6 +25,9 @@
             "aot": false,
             "assets": [
               "src/favicon.ico",
+              "src/robots.txt",
+              "src/sitemap.xml",
+              "src/.htaccess",
               "src/assets"
             ],
             "styles": [
@@ -132,6 +135,55 @@
             "production": {
               "devServerTarget": "frontEndCleanShrad:serve:production"
             }
+          }
+        },
+        "server": {
+          "builder": "@angular-devkit/build-angular:server",
+          "options": {
+            "outputPath": "dist/frontEndCleanShrad-server",
+            "main": "server.ts",
+            "tsConfig": "tsconfig.server.json"
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
+              "sourceMap": false,
+              "optimization": {
+                "scripts": false,
+                "styles": true
+              }
+            }
+          }
+        },
+        "serve-ssr": {
+          "builder": "@nguniversal/builders:ssr-dev-server",
+          "options": {
+            "browserTarget": "frontEndCleanShrad:build",
+            "serverTarget": "frontEndCleanShrad:server"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "frontEndCleanShrad:build:production",
+              "serverTarget": "frontEndCleanShrad:server:production"
+            }
+          }
+        },
+        "prerender": {
+          "builder": "@nguniversal/builders:prerender",
+          "options": {
+            "browserTarget": "frontEndCleanShrad:build:production",
+            "serverTarget": "frontEndCleanShrad:server:production",
+            "routes": [
+              "/"
+            ]
+          },
+          "configurations": {
+            "production": {}
           }
         }
       }
