--- a/l200207/frontEndCleanShrad/package.json
+++ b/l200207/frontEndCleanShrad/package.json
@@ -13,7 +13,11 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "pathcheck": "echo %npm_package_config_buildpath%"
+    "pathcheck": "echo %npm_package_config_buildpath%",
+    "dev:ssr": "ng run frontEndCleanShrad:serve-ssr",
+    "serve:ssr": "node dist/frontEndCleanShrad-server/main.js",
+    "build:ssr": "ng build --prod && ng run frontEndCleanShrad:server:production",
+    "prerender": "ng run frontEndCleanShrad:prerender"
   },
   "private": true,
   "dependencies": {
@@ -24,12 +28,15 @@
     "@angular/forms": "~8.2.4",
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
+    "@angular/platform-server": "~8.2.4",
     "@angular/router": "~8.2.4",
     "@fortawesome/fontawesome-free": "^5.12.1",
+    "@nguniversal/express-engine": "^9.1.0",
     "@types/chart.js": "^2.9.14",
     "@types/jquery": "^3.3.32",
     "angular-bootstrap-md": "^8.10.0",
     "chart.js": "^2.9.3",
+    "express": "^4.15.2",
     "fullcalendar": "^3.10.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
@@ -43,6 +50,8 @@
     "@angular/cli": "~8.3.3",
     "@angular/compiler-cli": "~8.2.4",
     "@angular/language-service": "~8.2.4",
+    "@nguniversal/builders": "^9.1.0",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
